RESOLVED FIXED311470
CSSParserContext hash function is missing 4 fields that operator== compares
https://bugs.webkit.org/show_bug.cgi?id=311470
Summary CSSParserContext hash function is missing 4 fields that operator== compares
Chris Dumez
Reported 2026-04-04 01:53:43 PDT
CSSParserContext hash function is missing 4 fields that operator== compares.
Attachments
Chris Dumez
Comment 1 2026-04-04 01:55:10 PDT
EWS
Comment 2 2026-04-04 18:54:51 PDT
Committed 310583@main (c8ab72fc4316): <https://commits.webkit.org/310583@main> Reviewed commits have been landed. Closing PR #62028 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-04-04 18:55:13 PDT
Note You need to log in before you can comment on or make changes to this bug.