CSSParserContext hash function is missing 4 fields that operator== compares https://bugs.webkit.org/show_bug.cgi?id=311470

Reviewed by Anne van Kesteren.

The add(Hasher&, const CSSParserContext&) function was missing
shouldIgnoreImportRules, counterStyleAtRuleImageSymbolsEnabled,
webkitMediaTextTrackDisplayQuirkEnabled, and enclosingRuleType.
Since operator== is defaulted and compares all fields, this caused
unnecessary hash collisions when CSSParserContext is used as a
hash table key.

* Source/WebCore/css/parser/CSSParserContext.cpp:
(WebCore::add):

Canonical link: https://commits.webkit.org/310583@main